--- a/css/2-col-portfolio.css
+++ b/css/2-col-portfolio.css
@@ -7,6 +7,7 @@
 body {
   padding-top: 54px;
   background-color: #343a40;
+  color:white;
 }
 
 @media (min-width: 992px) {
@@ -50,4 +51,13 @@ body {
 #weeklywinner {
   margin-top:10px;
   background-color:yellow;
+}
+
+.comment-link {
+  background:none;
+  border:none;
+}
+
+.comment-link:hover {
+  opacity: 0.5;
 }
