--- a/css/2-col-portfolio.css
+++ b/css/2-col-portfolio.css
@@ -6,7 +6,7 @@
 
 body {
   padding-top: 54px;
-  background-color: darkslategray;
+  background-color: #2E2F2F;
   color:white;
 }
 
@@ -40,7 +40,8 @@ footer {
 }
 
 .sidebar {
-  background-color: #5c6166;
+  background-color: #EB8921;
+  color: #1E1E1E;
 }
 
 
@@ -58,8 +59,10 @@ a.dropdown-link:hover{
 }
 
 #weeklywinner {
+  color: #1E1E1E;
   margin-top:10px;
-  background-color:lightblue;
+  background-color:#F5AD28;
+  padding:5px;
 }
 
 .comment-link {
@@ -75,10 +78,10 @@ a.dropdown-link:hover{
   background:none;
   text-decoration: underline;
   border:none;
-  color:white;
+  color: #1E1E1E;
 }
 
 .weekly-contest-link:hover {
-  color:white;
+  color: #1E1E1E;
   opacity: 0.5;
 }
